[tool.poetry]
name = "cst-utils"
version = "0.1.0"
description = "CST EM helper package"
authors = ["Igor Davidyuk <igor.davidyuk@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.20.1"
scipy = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
